--- a/causasyefectos.html
+++ b/causasyefectos.html
@@ -84,7 +84,7 @@
 <iframe width="100%" height="550" src="https://miro.com/app/live-embed/o9J_lwm7YUc=/?moveToViewport=-32072,-19301,77963,38728" frameBorder="0" scrolling="no" allowFullScreen></iframe></div><br>
 
 
-
+<img src="assets/img">
 
        
    
