--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ accesible para el sistema de salud local.
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="causasyefectos.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Causas y efectos</h4>
             </div></a>
