--- a/contexto.html
+++ b/contexto.html
@@ -32,10 +32,10 @@
               <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.html">Inicio</a></li>
-      <li><a class="nav-link scrollto" href="#s">Problemática</a></li>
-          <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
+      <li><a class="nav-link scrollto" href="index.html">Problemática</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Equipo</a></li>
 
-          <li><a class="nav-link   scrollto" href="#services">Entregables</a></li>
+          <li><a class="nav-link   scrollto" href="index.html">Entregables</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -136,7 +136,7 @@
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
           <span data-purecounter-start="0" data-purecounter-end="49" data-purecounter-duration="3" class="purecounter"></span>
-          <p>per 100 000 persons-years</br>(in HIC)</p>
+          <p>por 100 000 persons-years</br>(in HIC)</p>
         </div>
       </div>
 
