--- a/causasyefectos.html
+++ b/causasyefectos.html
@@ -32,10 +32,10 @@
               <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.html">Inicio</a></li>
-      <li><a class="nav-link scrollto" href="#s">Problemática</a></li>
-          <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
+      <li><a class="nav-link scrollto" href="index.html">Problemática</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Equipo</a></li>
 
-          <li><a class="nav-link   scrollto" href="#services">Entregables</a></li>
+          <li><a class="nav-link   scrollto" href="index.html">Entregables</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -83,38 +83,63 @@
             <h2>ÁRBOL DE PROBLEMAS</h2>
 <iframe width="100%" height="550" src="https://miro.com/app/live-embed/o9J_lwm7YUc=/?moveToViewport=-32072,-19301,77963,38728" frameBorder="0" scrolling="no" allowFullScreen></iframe></div><br>
 
+<div class="section-title">
+            <h2>MAPA DE STAKEHOLDERS</h2>
+<center><img src="assets/img/causas/stake.png" width="50%"></center>
 
-<img src="assets/img">
+  </div>
 
-       
+
+          <div class="section-title">
+            <h2>MAPAS DE EMPATÍA</h2>
+<iframe width="100%" height="550" src="https://miro.com/app/live-embed/o9J_lyi9Ntw=/?moveToViewport=-4977,-1308,13710,6810" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+
+
+
    
 
 
 
-<!--     <div class="section-title">
+    <div class="section-title">
       </br></br></br></br><h1>Referencias</h1></br>
       <ol>
          <li>
-            <p>World Health Organization, “Epilepsy: a public health imperative", Jun. 13, 2019. https://www.who.int/publications-detail-redirect/epilepsy-a-public-health-imperative.</p>
+            <p>T. Tomson, E. Beghi, A. Sundqvist, and S. I. Johannessen, “Medical risks in epilepsy: a review with focus on physical injuries, mortality, traffic accidents and their prevention,” Epilepsy Research, vol. 60, no. 1, pp. 1–16, Jun. 2004, doi: 10.1016/j.eplepsyres.2004.05.004.</p>
          </li>
          <li>
-            <p>Pan American Health Organization, “El Abordaje de la Epilepsia desde el Sector de la Salud Pública", Jan. 24, 2019. https://www3.paho.org/hq/index.php?option=com_content&view=article&id=14927:more-than-half-of-people-with-epilepsy-in-latin-america-and-the-caribbean-do-not-receive-treatment&Itemid=1926&lang=es.</p>
+            <p>[b] D. E. Friedman, R. S. Tobias, C. I. Akman, E. O. Smith, and H. S. Levin, “Recurrent seizure-related injuries in people with epilepsy at a tertiary epilepsy center: A 2-year longitudinal study,” Epilepsy Behav, vol. 19, no. 3, pp. 400–404, Nov. 2010, doi: 10.1016/j.yebeh.2010.07.029.</p>
          </li>
                   <li>
-            <p>I. Gonzales et al., “Seizures, cysticercosis and rural-to-urban migration: the PERU MIGRANT study”, Tropical Medicine & International Health, vol. 20, no. 4, pp. 546–552, 2015, doi: 10.1111/tmi.12456.</p>
+            <p>D. C. Hesdorffer et al., “Combined analysis of risk factors for SUDEP,” Epilepsia, vol. 52, no. 6, pp. 1150–1159, 2011, doi: 10.1111/j.1528-1167.2010.02952.x.</p>
          </li>
                   <li>
-            <p>J. G. Burneo, D. A. Steven, M. Arango, W. Zapata, C. M. Vasquez, and A. Becerra, “La cirugía de epilepsia y el establecimiento de programas quirúrgicos en el Perú: El proyecto de colaboración entre Perú y Canadá.”, Revista de Neuro-Psiquiatría, vol. 80, no. 3, pp. 181–188, Jul. 2017, doi: 10.20453/rnp.v80i3.3155.</p>
+            <p>S. D. Lhatoo, A. L. Johnson, D. M. Goodridge, B. K. MacDonald, J. W. A. S. Sander, and S. D. Shorvon, “Mortality in epilepsy in the first 11 to 14 years after diagnosis: Multivariate analysis of a long-term, prospective, population-based cohort,” Annals of Neurology, vol. 49, no. 3, pp. 336–344, 2001, doi: 10.1002/ana.70.</p>
          </li>
                   <li>
+            <p>J. J. Halford et al., “Detection of generalized tonic–clonic seizures using surface electromyographic monitoring,” Epilepsia, vol. 58, no. 11, pp. 1861–1869, 2017, doi: 10.1111/epi.13897.</p>
+         </li>
+
+
+         <li>
             <p>D. Guillén–Pinto et al., “Epilepsia en niños atendidos en el Hospital Nacional Cayetano Heredia de Lima, Perú, 2010- 2016.”, Revista de Neuro-Psiquiatría, vol. 81, no. 4, Art. no. 4, 2018, doi: 10.20453/rnp.v81i4.3436.</p>
          </li>
+
+
+         <li>
+            <p>J. W. Chen and C. G. Wasterlain, “Status epilepticus: pathophysiology and management in adults,” The Lancet Neurology, vol. 5, no. 3, pp. 246–256, Mar. 2006, doi: 10.1016/S1474-4422(06)70374-X.</p>
+         </li>
+
+
       </ol>
 
-    </div> -->
+    </div>
 
 
 
+
+
+</div>
+  </section>     
 
 
 
