--- a/index.html
+++ b/index.html
@@ -142,24 +142,14 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p style="text-align: justify;">
+              La epilepsia es una enfermedad cerebral no transmisible crónica que afecta a muchos niños en el Perú, la cual no les permite llevar un desarrollo adecuado debido a la poca atención que se le presta a su atención médica. 
+Nosotros somos un grupo de estudiantes de Ingeniería Biomédica que mediante este proyecto del curso de Biodiseño buscamos un objetivo: el desarrollo de un método que detecte el desencadenamiento de ataques epilépticos en los niños para brindarles así un estilo de vida fuera de riesgos y de los estigmas sociales.
+
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
+          
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
-          </div>
+          
         </div>
 
       </div>
