--- a/contexto.html
+++ b/contexto.html
@@ -75,7 +75,12 @@
       <!-- ======= FIN BREADCRUMBS ======= -->
 
 
-      <!-- ======= INICIO FRASE ======= -->
+
+
+
+
+
+<!-- ======= INICIO FRASE ======= -->
       <section>
         <div class="container" >
           <blockquote>
@@ -84,7 +89,24 @@
           </blockquote>
         </div>
       </section>
-      <!-- ======= FIN FRASE ======= -->
+<!-- ======= FIN FRASE ======= -->
+
+
+
+
+
+<!-- ======= INICIO INTRODUCCION ======= -->
+
+  <section class="cifras section-bg">
+    <div class="container" >
+      <div class="section-title">
+        <h2>¿QUÉ ES LA EPILEPSIA?</h2>
+        <p>La epilepsia es una enfermedad crónica no transmisible que afecta al cerebro. Se caracteriza por una actividad eléctrica anormal que provoca convulsiones o comportamientos inusuales, sensaciones y, a veces, pérdida de la conciencia. Tiene consecuencias neurológicas, cognitivas, psicológicas y sociales y representa una proporción significativa de la carga mundial de morbilidad. A pesar de la disponibilidad de medicamentos anticonvulsivos eficaces y de bajo costo, más del 75% de las personas con epilepsia en los países de bajos ingresos no tienen acceso al tratamiento ¹.</br></p>
+      </div>
+    </div>
+  </section>
+
+<!-- ======= FIN INTRODUCCION ======= -->
 
 
 
@@ -92,21 +114,14 @@
 
 
 
-<!-- ======= INICIO MUNDIAL CIFRAS ======= -->
-
-<section class="cifras section-">
-  <div class="container" >
 
 
 
+<!-- ======= INICIO MUNDIAL ======= -->
+
+<section class="cifras section">
+  <div class="container">
           <div class="section-title">
-
-            <h2>¿QUÉ ES LA EPILEPSIA?</h2>
-            <p>La epilepsia es una enfermedad crónica no transmisible que afecta al cerebro. Se caracteriza por una actividad eléctrica anormal que provoca convulsiones o comportamientos inusuales, sensaciones y, a veces, pérdida de la conciencia. Tiene consecuencias neurológicas, cognitivas, psicológicas y sociales y representa una proporción significativa de la carga mundial de morbilidad. A pesar de la disponibilidad de medicamentos anticonvulsivos eficaces y de bajo costo, más del 75% de las personas con epilepsia en los países de bajos ingresos no tienen acceso al tratamiento ¹.</br></br></br></p>
-          </div>
-
-
-    <div class="section-title">
         <h2>Efecto mundial en cifras¹ 🌎</h2>
     </div>
 
@@ -115,59 +130,59 @@
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
           <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="3" class="purecounter"></span>
-          <p>Millones de personas</p>
+          <p>millones de personas</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+        <div class="count-box">
+          <span data-purecounter-start="0" data-purecounter-end="13" data-purecounter-duration="3" class="purecounter"></span>
+          <p>millones de AVAD</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+        <div class="count-box">
+          <span>0.6%</span>
+          <p>del GBD</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+        <div class="count-box">
+          <span>7.6</span>
+          <p>por 1000 personas</br></br></br></p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
           <span data-purecounter-start="0" data-purecounter-end="139" data-purecounter-duration="3" class="purecounter"></span>
-          <p>por 100 000 al año</p>
+          <p>por 100.000 personas-año</br>(en PIBM)</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="13" data-purecounter-duration="10" class="purecounter"></span>
-          <p>Million DALYs</p>
+          <span>48.9</span>
+          <p>por 100 000 personas-año</br>(en HIC)</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="49" data-purecounter-duration="3" class="purecounter"></span>
-          <p>por 100 000 persons-years</br>(in HIC)</p>
+          <span>50%</span>
+          <p>padece condiciones</br>físicas o psiquiátricas</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
         <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="3" class="purecounter"></span>
-          <p>percentage have coexisting physical or psychiatric conditions</p>
+          <span>70%</span>
+          <p>podría quedar libre de convulsiones</br>con tratamiento</p>
         </div>
       </div>
-
-      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-        <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="3" class="purecounter"></span>
-          <p>percentage of the GBD</p>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-        <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="80" data-purecounter-duration="3" class="purecounter"></span>
-          <p>per 10000 people</p>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-        <div class="count-box">
-          <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="70" class="purecounter"></span>
-          <p>percentage could become seizure free with treatment</p>
-        </div>
-      </div>
-
+</br></br>
     </div>
 
 
@@ -184,7 +199,7 @@
        
             </br></br></br>
 <h4><center>Epilepsia por edad y sexo</center></h4>
-              <a href="assets/img/contexto/edad.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/contexto/edad.png" class="img-fluid" alt="" ></a>
+              <a href="assets/img/contexto/edad.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/contexto/edad.png" class="img-fluid" alt=""></a>
           </div>
 
           </div>
@@ -207,6 +222,10 @@
 
 
 
+  </div>
+</section>
+
+<!-- ======= FIN MUNDIAL ======= -->
 
 
 
@@ -216,48 +235,23 @@
 
 
 
+<!-- ======= INICIO REGION ======= -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<section class="cifras section-bg">
+  <div class="container">
     <div class="section-title">
-      </br></br></br>
-      <h2>Contexto regional: América Latina ²</h2>
+      <h2>Contexto regional: América Latina²</h2>
     </div>
     
-    <div class="section-title">
-      <h4>Prevalencia en América Latina y el Caribe:</h4>
-    </div>
 
     <div class="row justify-content-end">
       <div>
+
+
+
+
         <div class="count-box">
+          <h4>Prevalencia en América Latina y el Caribe</h4></br>
           <span>17.8</span>
           <p>por 1000 personas</p></br></br></br>
         </div>
@@ -268,7 +262,7 @@
       <div class="col-xs-6 col-md-4">
         <div class="count-box">
           <div style="float: right;">
-            <h4>Incidencia en LMIC</h4>
+            <h4>Incidencia en PIBM</h4>
             <span data-purecounter="0" data-purecounter-end="1000" data-purecounter-duration="3" class="purecounter" ></span>
             <p>por 100 000 personas-año</p>
           </div>
@@ -283,7 +277,7 @@
       <div class="col-xs-6 col-md-4">
         <div class="count-box">
           <div style="float: left;">
-            <h4>Incidencia en LMIC</h4>
+            <h4>Incidencia en HIC</h4>
             <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="3" class="purecounter" ></span>
             <p>por 100 000 personas-año</p>
           </div>
@@ -291,9 +285,28 @@
       </div>
     </div>
 
-    <div class="section-title">
-      </br></br></br>
-      <h2>¿Cuál es la situación en Perú? 🦙</h2>
+
+  </div>
+</section>
+
+<!-- ======= FIN REGION ======= -->
+
+
+
+
+
+
+
+
+
+
+<!-- ======= INICIO PERÚ ======= -->
+
+<section class="cifras section-bg-white">
+  <div class="container">
+
+  <div class="section-title">
+      <h2>¿Cuál es la situación en Perú? 🦙</h2></br>
       <h4>Prevalencia por 1000 personas en:</h4>
     </div>
 
@@ -303,7 +316,7 @@
 
         <div class="count-box"0>
           <div style="float: right;">
-            <span data-purecounter="0.6" data-purecounter-end="15" data-purecounter-duration="3" class="purecounter" ></span>
+            <span>15.3</span>
             <p>Grupos urbanos ³</p>
             </div>
           </div>
@@ -311,7 +324,7 @@
 
         <div class="col-xs-6 col-md-4">
           <div class="count-box">
-            <span data-purecounter-start="0" data-purecounter-end="36" data-purecounter-duration="3" class="purecounter"></span>
+            <span>35.6</span>
             <p>Grupos migrantes ³</p>
           </div>
         </div>
@@ -319,7 +332,7 @@
         <div class="col-xs-6 col-md-4">
           <div class="count-box"0>
             <div style="float: left;">
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="3" class="purecounter" ></span>
+              <span>25</span>
               <p>Grupos rurales ³</p>
             </div>
           </div>
@@ -338,8 +351,8 @@
 
 
     <div class="section-title">
-      </br></br></br>
-      <h2>¿Cómo los pacientes responden al tratamiento?</h2>
+      </br></br>
+      <h4>¿Cómo responden los pacientes al tratamiento?</h4>
     </div>
 
     <div class="row justify-content-end">
@@ -372,13 +385,30 @@
 
 
 
+  </div>
+</section>
+
+<!-- ======= FIN PERÚ ======= -->
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+<!-- ======= INICIO REFERENCIAS ======= -->
+
+<section class="cifras section-bg">
+  <div class="container" >
     <div class="section-title">
-      </br></br></br></br><h1>Referencias</h1></br>
+      <h1>Referencias</h1></br>
       <ol>
          <li>
             <p>World Health Organization, “Epilepsy: a public health imperative", Jun. 13, 2019. https://www.who.int/publications-detail-redirect/epilepsy-a-public-health-imperative.</p>
@@ -399,48 +429,10 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
+  </div>
 </section>
 
-<!-- ======= FINAL MUNDIAL CIFRAS ======= -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- ======= FIN REFERENCIAS ======= -->
 
 
 
