--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Detector de convulsiones toniclónicas orientado a niños</h1>
+          <h1>Detección de crisis epilépticas tónicoclónicas generalizadas</h1>
           <h2>Proyecto de Biodiseño 2021-2</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <!--<a href="#about" class="btn-get-started scrollto">Comenzar</a>-->
@@ -261,7 +261,7 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/team-h3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/ddsavid.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>David Rodríguez</h4>
                 <span>Electrónica y desarrollo web</span>
@@ -289,7 +289,7 @@ accesible para el sistema de salud local.
 			
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/david.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/dafffvid.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Christian Mucha</h4>
                 <span>Modelado 3D</span>
@@ -339,12 +339,6 @@ accesible para el sistema de salud local.
             </div></a>
           </div>
 
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href="causasyefectos.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Causas y efectos</h4>
-            </div></a>
-          </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <a href=""><div class="icon-box">
@@ -352,6 +346,19 @@ accesible para el sistema de salud local.
               <h4>Problemática</h4>
             </div></a>
           </div>
+
+
+
+
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <a href="causasyefectos.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Causas y efectos</h4>
+            </div></a>
+          </div>
+
+
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <a href=""><div class="icon-box">
