--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		  <li><a class="nav-link scrollto" href="#pricing">Problemática</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
 
-          <li><a class="nav-link   scrollto" href="#services">Entregables</a></li>
+          <li><a class="nav-link   scrollto" href="proyecto.html">Proyecto</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -223,8 +223,7 @@ accesible para el sistema de salud local.
 
         <div class="section-title">
           <h2>Equipo</h2>
-          <p>Somos un grupo de estudiantes de la especialidad de Ingeniería Biomédica de la PUCP y la UPCH. A través de nuestros conocimientos, investigación y soporte de los profesores, buscamos desarrollar una solución tecnológica eficaz para detectar y alertar la presencia de convulsiones en niños
-(adultos) con epilepsia. A continuación, se muestra una breve descripción del rol de cada integrante del equipo.</br></p>
+          </br>
         </div>
 
         <div class="row">
@@ -239,7 +238,7 @@ accesible para el sistema de salud local.
                 <span>Coordinador General</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+
                 </div>
               </div>
             </div>
@@ -253,7 +252,7 @@ accesible para el sistema de salud local.
                 <span>Programación</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+
                 </div>
               </div>
             </div>
@@ -267,7 +266,7 @@ accesible para el sistema de salud local.
                 <span>Electrónica y desarrollo web</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+
                 </div>
               </div>
             </div>
@@ -281,7 +280,7 @@ accesible para el sistema de salud local.
                 <span>Investigación</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+
                 </div>
               </div>
             </div>
@@ -295,7 +294,7 @@ accesible para el sistema de salud local.
                 <span>Modelado 3D</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+
                 </div>
               </div>
             </div>
@@ -309,72 +308,19 @@ accesible para el sistema de salud local.
                 <span>Electrónica</span>
                 <p></br></p>
                 <div class="social">
-                  <a href=""><i class="ri-mail-fill"></i></a>
+                 <!--  <a href=""><i class="ri-mail-fill"></i></a> -->
                 </div>
               </div>
             </div>
           </div>
 
         </div>
-
+          </br></br>
       </div>
     </section><!-- End Team Section -->
 	  
 	  
-<!-- ======= INICIO PROYECTO ======= -->
 
-<section id="services" class="services section-bg">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Entregables</h2>
-        </div>
-        <div class="row">
-      
-          <!-- ======= ANTECEDENTES ======= --> 
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href="contexto.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/contexto.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Contexto global y nacional</h4>
-            </div></a>
-          </div>
-
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Problemática</h4>
-            </div></a>
-          </div>
-
-
-
-
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href="causasyefectos.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Causas y efectos</h4>
-            </div></a>
-          </div>
-
-
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Estado del arte</h4>
-            </div></a>
-          </div>
-
-
-
-
-        </div>
-        </br></br></br></br></br></br></br></br>
-      </div>
-</section>
-<!-- ======= FINAL PROYECTO ======= -->
     
 
 
