--- a/contexto.html
+++ b/contexto.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Contexto global y nacional</title>
+    <title>Contexto global y nacional - TDEC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="assets/img/favicon.png" rel="icon">
@@ -35,7 +35,7 @@
       <li><a class="nav-link scrollto" href="index.html">Problemática</a></li>
           <li><a class="nav-link scrollto" href="index.html">Equipo</a></li>
 
-          <li><a class="nav-link   scrollto" href="index.html">Entregables</a></li>
+          <li><a class="nav-link   scrollto active" href="proyecto.html">Proyecto</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
