--- a/proyecto.html
+++ b/proyecto.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Contexto global y nacional</title>
+    <title>Entregables - TDEC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="assets/img/favicon.png" rel="icon">
@@ -35,7 +35,7 @@
       <li><a class="nav-link scrollto" href="index.html">Problemática</a></li>
           <li><a class="nav-link scrollto" href="index.html">Equipo</a></li>
 
-          <li><a class="nav-link   scrollto" href="index.html">Entregables</a></li>
+          <li><a class="nav-link   scrollto active" href="proyecto.html">Proyecto</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -102,7 +102,7 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="problematica.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Problemática</h4>
             </div></a>
@@ -159,7 +159,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href="contexto.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/contexto.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Contexto global y nacional</h4>
+              <h4>Requerimientos de diseño</h4>
             </div></a>
           </div>
 
@@ -167,7 +167,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Problemática</h4>
+              <h4>Entradas y salidas</h4>
             </div></a>
           </div>
 
@@ -178,7 +178,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href="causasyefectos.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Causas y efectos</h4>
+              <h4>Conceptos de solución</h4>
             </div></a>
           </div>
 
@@ -187,7 +187,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Estado del arte</h4>
+              <h4>Proyectos preliminares</h4>
             </div></a>
           </div>
 
@@ -217,7 +217,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
             <a href="contexto.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/contexto.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Contexto global y nacional</h4>
+              <h4>Desarrollo de prototipo</h4>
             </div></a>
           </div>
 
@@ -225,7 +225,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
             <a href=""><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Problemática</h4>
+              <h4>Validación de prototipo</h4>
             </div></a>
           </div>
 
@@ -236,7 +236,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href="causasyefectos.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Causas y efectos</h4>
+              <h4>Redacción del paper</h4>
             </div></a>
           </div>
 
@@ -245,7 +245,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Estado del arte</h4>
+              <h4>Elaboración del póster</h4>
             </div></a>
           </div>
 
