--- a/problematica.html
+++ b/problematica.html
@@ -90,7 +90,7 @@
       <div class="section-title" style="margin-bottom:-15px">
         <h2>MAPA DE STAKEHOLDERS</h2>
               </br>
-              <a href="assets/img/problematica/stakeholders.svg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholders.svg" class="img-fluid" alt="" width="900px" height="900px"></a>
+              <a href="assets/img/problematica/stakeholders.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholders.svg" class="img-fluid" alt="" width="980px" height="980px"></a>
 
       </div>
     </div>
@@ -103,9 +103,10 @@
   <section class="cifras section-bg-yellow">
     <div class="container" >
       <div class="section-title" style="margin-bottom:-15px">
-        <h2>MAPA DE EMPATÍA</h2>
+        <h2>MAPAS DE EMPATÍA</h2>
               </br>
-              <a href="assets/img/problematica/stakeholdDers.svg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholdDers.svg" class="img-fluid" alt="" width="900px" height="900px"></a>
+              <a href="assets/img/problematica/stakeholdDers.svg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
+                <img src="assets/img/problematica/empatia_paciente.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
 
       </div>
     </div>
