--- a/problematica.html
+++ b/problematica.html
@@ -105,8 +105,16 @@
       <div class="section-title" style="margin-bottom:-15px">
         <h2>MAPAS DE EMPATÍA</h2>
               </br>
-              <a href="assets/img/problematica/stakeholdDers.svg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
-                <img src="assets/img/problematica/empatia_paciente.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
+              <a href="assets/img/problematica/empatia_paciente.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
+              <img src="assets/img/problematica/empatia_paciente.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
+              </br></br></br>
+              <a href="assets/img/problematica/empatia_familia.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
+              <img src="assets/img/problematica/empatia_familia.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
+              </br></br></br>
+              <a href="assets/img/problematica/empatia_doctor.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
+              <img src="assets/img/problematica/empatia_doctor.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
+
+
 
       </div>
     </div>
